# multi_bezier_curve_smoothing_path

./: CMakeLists.txt  README.md  test_bezier.cpp
matlab/: five_five.m  five_three.m
src/: bezier.cpp  bezier.h
